Fixed alert alignment error, logo link hover error, and added mobile meta tag

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -97,3 +97,7 @@ h2 span {
 ::selection {
 	background-color: #FF4A3D;
 }
+
+@-ms-viewport{
+  width: device-width;
+}
